@@ -19,6 +19,10 @@ Ipe 7.2.28
  * Fix error editing arcs (#472).
 
  * Fix error editing ellipses (#473).
+
+ * Show error message during startup on Windows when Ipe was installed
+   on a path containing accented characters (or anything else not in
+   ASCII) (#467).
  
 ----------------------------------------------------------------------
 
